scrollbar fixed

--- a/PROJECT1-SEC-2-JaRernPorn/src/assets/main.css
+++ b/PROJECT1-SEC-2-JaRernPorn/src/assets/main.css
@@ -11,20 +11,24 @@
 }
 
 *::-webkit-scrollbar {
-  width: 15px;
-}
-
-*::-webkit-scrollbar-track {
-  background: var(--primary);
-  border-radius: 20px;
+  width: 10px;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: var(--secondary);
   border-radius: 14px;
-  border: 2px solid var(--primary);
 }
 
 @tailwind components;
 @tailwind utilities;
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 
